[package]
authors = ["Jose Luis <joseluisr@twitter.com>"]
edition = "2018"
name = "advent-code-2019-rust"
version = "0.1.0"
[[bench]]
harness = false
name = "bench6"

[dependencies]
itertools = "*"
num = "0.2.0"
pathfinding = "2.0.1"
rayon = "*"
im ="*"

[dev-dependencies]
criterion = "0.3"

[profile]
[profile.release]
lto = true
